--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "ev-emitter": "^2.1.2",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
-    "express-rate-limiter": "^1.3.1",
+    "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.0",
     "fizzy-ui-utils": "^3.0.0",
