--- a/package.json
+++ b/package.json
@@ -12,24 +12,18 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@paypal/checkout-server-sdk": "^1.0.3",
     "@popperjs/core": "^2.11.8",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "day": "^0.0.2",
-    "dayjs": "^1.11.13",
+    "debug": "^4.4.0",
     "desandro-matches-selector": "^2.0.2",
     "dotenv": "^16.4.7",
-    "ejs": "^3.1.10",
     "ev-emitter": "^2.1.2",
     "express": "^4.21.2",
-    "express-async-handler": "^1.2.0",
     "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.1",
-    "express-validator": "^7.2.0",
     "fizzy-ui-utils": "^3.0.0",
     "get-size": "^3.0.0",
     "helmet": "^8.1.0",
@@ -38,25 +32,15 @@
     "jsonwebtoken": "^9.0.2",
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
-    "luxon": "^3.5.0",
     "masonry-layout": "^4.2.2",
-    "moment": "^2.30.1",
-    "mongoose": "^8.13.0",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.12.0",
-    "node-fetch": "^3.3.2",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.16",
-    "openai": "^4.78.1",
     "outlayer": "^2.1.1",
     "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "pdfkit": "^0.15.2",
-    "punycode": "^2.3.1",
     "sequelize": "^6.37.5",
-    "uuid": "^11.1.0",
-    "validator": "^13.12.0"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
