--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "debug": "^4.4.0",
     "desandro-matches-selector": "^2.0.2",
     "dotenv": "^16.4.7",
+    "ejs": "^3.1.10",
     "ev-emitter": "^2.1.2",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
