--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.1",
+    "express-validator": "^7.2.1",
     "fizzy-ui-utils": "^3.0.0",
     "get-size": "^3.0.0",
     "helmet": "^8.1.0",
@@ -44,7 +45,8 @@
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "sequelize": "^6.37.7",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
